--- a/app/src/main/res/layout/activity_main_profile_load.xml
+++ b/app/src/main/res/layout/activity_main_profile_load.xml
@@ -44,9 +44,9 @@
         android:id="@+id/medicationList"
         android:layout_width="380dp"
         android:layout_height="513dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewLastName" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
