--- a/app/src/main/res/layout/activity_main_profile_load.xml
+++ b/app/src/main/res/layout/activity_main_profile_load.xml
@@ -7,13 +7,12 @@
     tools:context=".MainProfileLoadActivity">
 
     <TextView
-        android:id="@+id/textViewWeclome"
+        android:id="@+id/textViewWelcome"
         android:layout_width="178dp"
         android:layout_height="47dp"
-        android:layout_marginTop="116dp"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="56dp"
         android:text="Welcome to your profile!"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.227"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -21,45 +20,36 @@
         android:id="@+id/textViewFirstName"
         android:layout_width="299dp"
         android:layout_height="32dp"
+        android:layout_marginTop="16dp"
         android:editable="false"
         android:text="~You shouldn't see this ever~"
-        app:layout_constraintBottom_toTopOf="@+id/textViewLastName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textViewWeclome" />
+        app:layout_constraintStart_toStartOf="@+id/textViewWelcome"
+        app:layout_constraintTop_toBottomOf="@+id/textViewWelcome" />
 
     <TextView
         android:id="@+id/textViewLastName"
         android:layout_width="298dp"
         android:layout_height="28dp"
+        android:layout_marginTop="16dp"
         android:text="~You shouldn't see this ever~"
-        app:layout_constraintBottom_toTopOf="@+id/medicationList"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/textViewFirstName"
         app:layout_constraintTop_toBottomOf="@+id/textViewFirstName" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/medicationList"
-        android:layout_width="375dp"
-        android:layout_height="406dp"
-        android:layout_marginBottom="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent" />
+        android:layout_width="379dp"
+        android:layout_height="483dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textViewLastName" />
 
     <Button
         android:id="@+id/editprofile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="112dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="32dp"
         android:text="Edit Profile"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.519"
-        app:layout_constraintStart_toEndOf="@+id/textViewWeclome"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toEndOf="@+id/textViewWelcome"
+        app:layout_constraintTop_toTopOf="@+id/textViewWelcome" />
 </androidx.constraintlayout.widget.ConstraintLayout>
