--- a/app/src/main/res/layout/med_entry_profile.xml
+++ b/app/src/main/res/layout/med_entry_profile.xml
@@ -7,7 +7,7 @@
 
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="254dp"
         android:layout_height="89dp"
         android:layout_weight="9"
         android:orientation="vertical">
@@ -24,9 +24,16 @@
 
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/viewDosage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="9"
+        android:text="TextView" />
+
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="88dp"
+        android:layout_height="89dp"
         android:gravity="end"
         android:orientation="vertical">
 
@@ -36,12 +43,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Details" />
-
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
 
     </LinearLayout>
 
