--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+    <color name="darkRed">#4B0000</color>
+    <color name="darkOrangeRed">#AF4B00</color>
+    <color name="lightOrangeRed">#DC9600</color>
+    <color name="darkGreen">#006400</color>
+    <color name="lightGreen">#009600</color>
 </resources>
