--- a/app/src/main/res/layout/activity_dosage.xml
+++ b/app/src/main/res/layout/activity_dosage.xml
@@ -28,12 +28,12 @@
     <ListView
         android:id="@+id/listViewMed"
         android:layout_width="wrap_content"
-        android:layout_height="565dp"
+        android:layout_height="421dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="16dp"
-        android:layout_marginEnd="21dp"
-        android:layout_marginBottom="55dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="112dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -44,6 +44,7 @@
         android:layout_height="32dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="26dp"
-        android:layout_marginTop="68dp" />
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="75dp"
+        android:text="hi " />
 </RelativeLayout>
