--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="lightOrangeRed">#DC9600</color>
     <color name="darkGreen">#006400</color>
     <color name="lightGreen">#009600</color>
+    <color name="white">#000000</color>
 </resources>
