--- a/app/src/main/res/layout/activity_main_profile_load.xml
+++ b/app/src/main/res/layout/activity_main_profile_load.xml
@@ -65,7 +65,7 @@
 
     <Button
 
-        android:id="@+id/buttAddMed"
+        android:id="@+id/buttonAddPrescription"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
