--- a/app/src/main/res/layout/activity_prescription_details.xml
+++ b/app/src/main/res/layout/activity_prescription_details.xml
@@ -10,9 +10,12 @@
         android:id="@+id/medName"
         android:layout_width="wrap_content"
         android:layout_height="18dp"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="116dp"
+        android:editable="false"
+        android:hint="you should never see this"
         android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/dosage"
+        app:layout_constraintEnd_toStartOf="@+id/buttonDetails"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -20,54 +23,59 @@
         android:id="@+id/dosage"
         android:layout_width="51dp"
         android:layout_height="25dp"
+        android:hint="you should never see this"
         android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/notes"
         app:layout_constraintStart_toStartOf="@+id/medName"
-        tools:layout_editor_absoluteY="184dp" />
+        app:layout_constraintTop_toBottomOf="@+id/medName" />
 
     <TextView
         android:id="@+id/notes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:hint="you should never see this"
         android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/docNotes"
         app:layout_constraintStart_toStartOf="@+id/dosage"
-        tools:layout_editor_absoluteY="262dp" />
+        app:layout_constraintTop_toBottomOf="@+id/dosage" />
 
     <TextView
         android:id="@+id/docNotes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:editable="false"
+        android:hint="you should never see this"
         android:text="TextView"
+        app:layout_constraintBottom_toTopOf="@+id/buttonAddEditPresciption"
         app:layout_constraintStart_toStartOf="@+id/notes"
-        tools:layout_editor_absoluteY="336dp" />
+        app:layout_constraintTop_toBottomOf="@+id/notes" />
 
     <Button
-        android:id="@+id/buttDetails"
+        android:id="@+id/buttonDetails"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="148dp"
-        android:layout_marginEnd="8dp"
-        android:text="Button"
+        android:text="Details"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/medName"
-        tools:layout_editor_absoluteY="101dp" />
+        app:layout_constraintTop_toTopOf="@+id/medName" />
 
     <Button
-        android:id="@+id/buttAdd"
+        android:id="@+id/buttonAddEditPresciption"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        android:layout_marginBottom="64dp"
-        android:text="Button"
+        android:text="Add / Edit"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/docNotes"
+        app:layout_constraintTop_toBottomOf="@+id/docNotes" />
 
     <Button
-        android:id="@+id/buttCancel"
+        android:id="@+id/buttonCancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="72dp"
-        android:text="Button"
-        app:layout_constraintStart_toEndOf="@+id/buttAdd"
-        tools:layout_editor_absoluteY="619dp" />
+        android:text="@android:string/cancel"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
+        app:layout_constraintStart_toEndOf="@+id/buttonAddEditPresciption"
+        app:layout_constraintTop_toTopOf="@+id/buttonAddEditPresciption" />
 </androidx.constraintlayout.widget.ConstraintLayout>
