--- a/app/src/main/res/layout/activity_dosage.xml
+++ b/app/src/main/res/layout/activity_dosage.xml
@@ -47,4 +47,14 @@
         android:layout_marginStart="14dp"
         android:layout_marginTop="75dp"
         android:text="hi " />
+
+    <Button
+        android:id="@+id/DosageBACKButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="149dp"
+        android:layout_marginBottom="32dp"
+        android:text="BACK" />
 </RelativeLayout>
