--- a/app/src/main/res/layout/activity_all__meds.xml
+++ b/app/src/main/res/layout/activity_all__meds.xml
@@ -10,14 +10,18 @@
         android:id="@+id/medicationList"
         android:layout_width="379dp"
         android:layout_height="483dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.666"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.431" />
+        app:layout_constraintTop_toBottomOf="@+id/viewLabelAllMedications"
+        tools:layout_editor_absoluteX="16dp" />
+
+    <TextView
+        android:id="@+id/viewLabelAllMedications"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="All Medications"
+        app:layout_constraintBottom_toTopOf="@+id/medicationList"
+        app:layout_constraintEnd_toEndOf="@+id/medicationList"
+        app:layout_constraintStart_toStartOf="@+id/medicationList"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
