--- a/app/src/main/res/layout/medication_entry.xml
+++ b/app/src/main/res/layout/medication_entry.xml
@@ -31,17 +31,17 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/buttonAddPrescription"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Add" />
+
+        <Button
             android:id="@+id/buttonDetails"
             style="@style/Widget.AppCompat.Button.Small"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Details" />
-
-        <Button
-            android:id="@+id/button5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Button" />
 
     </LinearLayout>
 
