--- a/app/src/main/res/layout/activity_main_profile_load.xml
+++ b/app/src/main/res/layout/activity_main_profile_load.xml
@@ -36,7 +36,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textViewFirstName" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/medicationList"
+        android:id="@+id/medicationRecycler"
         android:layout_width="377dp"
         android:layout_height="405dp"
         android:layout_marginStart="16dp"
