--- a/app/src/main/res/layout/activity_all_meds.xml
+++ b/app/src/main/res/layout/activity_all_meds.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".All_Meds">
+    tools:context=".AllMeds">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/medicationRecycler"
