--- a/app/src/main/res/layout/activity_all_meds.xml
+++ b/app/src/main/res/layout/activity_all_meds.xml
@@ -4,11 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AllMeds">
+    tools:context=".AllMedications">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/medicationRecycler"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:id="@+id/medicationRecycler" />
+        android:layout_height="match_parent" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
