--- a/app/src/main/res/layout/adapter_view_dosages.xml
+++ b/app/src/main/res/layout/adapter_view_dosages.xml
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="horizontal"
     android:weightSum="100">
-    
+
     <TextView
-        android:gravity="center"
+        android:id="@+id/textviewMed"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:text="TextView1"
-        android:id="@+id/textviewMed"
-        android:layout_weight="66.6"/>
+        android:layout_weight="66.6"
+        android:gravity="center"
+        android:text="TextView1" />
 
     <LinearLayout
-        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="33.3">
+        android:layout_weight="33.3"
+        android:orientation="vertical">
 
         <TextView
-            android:layout_gravity="center"
-            android:text="TextView2"
             android:id="@+id/textViewDosage"
             android:layout_width="match_parent"
-            android:layout_height="30dp" />
-        <TextView
+            android:layout_height="30dp"
             android:layout_gravity="center"
-            android:text="TextView3"
+            android:text="TextView2" />
+
+        <TextView
             android:id="@+id/textViewMeasure"
             android:layout_width="match_parent"
-            android:layout_height="30dp" />
+            android:layout_height="30dp"
+            android:layout_gravity="center"
+            android:text="TextView3" />
 
     </LinearLayout>
 
