--- a/app/src/main/res/layout/medication_card.xml
+++ b/app/src/main/res/layout/medication_card.xml
@@ -16,7 +16,7 @@
         android:padding="10dp">
 
         <Button
-            android:id="@+id/buttonMedList"
+            android:id="@+id/buttonAddPrescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
