(ADD)[Anan,Stephen] Prescriptions can be added to the DB & the cards now show up in the profile recycler (finally)

--- a/app/src/main/res/layout/prescription_card.xml
+++ b/app/src/main/res/layout/prescription_card.xml
@@ -37,7 +37,7 @@
             android:id="@+id/viewMedGenNamePrescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/viewMedName"
+            android:layout_below="@+id/viewMedNamePrescription"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="6dp"
             android:layout_marginTop="8dp"
@@ -47,7 +47,7 @@
             android:id="@+id/labelDosage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/viewMedGenName"
+            android:layout_below="@+id/viewMedGenNamePrescription"
             android:layout_alignParentStart="true"
             android:layout_marginLeft="6dp"
             android:layout_marginTop="8dp"
@@ -57,7 +57,7 @@
             android:id="@+id/viewPrescriptionDosage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/viewMedGenName"
+            android:layout_below="@+id/viewMedGenNamePrescription"
             android:layout_toRightOf="@id/labelDosage"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="8dp"
