--- a/app/src/main/res/layout/activity_prescription_edit.xml
+++ b/app/src/main/res/layout/activity_prescription_edit.xml
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:hint="~ input doctor notes ~"
+        android:hint="doctors notes will go here... user cannot edit"
         android:inputType="textMultiLine"
         app:layout_constraintBottom_toTopOf="@+id/buttonSavePrescriptionChanges"
         app:layout_constraintEnd_toEndOf="parent"
