--- a/app/src/main/res/layout/prescription_card.xml
+++ b/app/src/main/res/layout/prescription_card.xml
@@ -39,7 +39,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/viewMedNamePrescription"
             android:layout_alignParentStart="true"
-            android:layout_marginLeft="6dp"
+            android:layout_marginStart="6dp"
             android:layout_marginTop="8dp"
             android:text="~example generic name~" />
 
@@ -49,7 +49,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/viewMedGenNamePrescription"
             android:layout_alignParentStart="true"
-            android:layout_marginLeft="6dp"
+            android:layout_marginStart="6dp"
             android:layout_marginTop="8dp"
             android:text="Dosage:" />
 
