(ADD)[Stephen, Chiyedza]Added mainDiseases to MedicationDetails

--- a/app/src/main/res/layout/activity_medication_details.xml
+++ b/app/src/main/res/layout/activity_medication_details.xml
@@ -48,5 +48,14 @@
             app:layout_constraintStart_toStartOf="@+id/viewManufacturer"
             app:layout_constraintTop_toBottomOf="@+id/viewManufacturer" />
 
+        <TextView
+            android:id="@+id/viewMainDiseases"
+            android:layout_width="match_parent"
+            android:layout_height="197dp"
+            android:text="TextView"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/viewManufacturer"
+            app:layout_constraintTop_toBottomOf="@+id/viewManufacturer" />
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
